# todo-list-cli

./: .gitignore  Cargo.toml  README.md  sqlite.db  sqlite.db-shm  sqlite.db-wal  todo-data.toml
Docs/: HelpfulSource.md
migrations/: 001_create_tasks_table.sql
src/: cli.rs  db.rs  file_io.rs  main.rs  repository.rs  service.rs
src/enums/: mod.rs  priority.rs  status.rs
src/models/: mod.rs  priority.rs  status.rs  task.rs
src/structs/: mod.rs  task.rs  tasklist.rs
