[package]
name = "todo-list-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.44", features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "=0.4.40", features = ["serde"] }
toml = "0.7"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.20.0", features = ["macros"] }
async-trait = "0.1.89"
